rud_boot/src/main/rud_react/src/assets/css/stockTable.scss
.stock-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start; // 상단 정렬
    overflow-y: auto; // 세로 스크롤 활성화
    padding: 20px; // 내부 여백
    color: #EAECEF;
    height: 100vh;

    .contents-container {
        width: auto;
        margin: auto;
        display: block;
        flex-direction: column;
        align-items: center;
        justify-content: flex-start;
        height: 100%; // 전체 화면 높이
        overflow-y: auto;
        padding: 20px; // 내부 여백

        .switch-container {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            width: 100%;
            height: auto;
            margin-top: 5%;

            .table-switch-wrapper {
                display: flex;
                flex-direction: row;
                width: 100%;
                border-color: transparent;
                border-radius: 10px;
                background-color: #1f2540;
                padding: 8px;

                .table-switch {
                    display: flex;
                    justify-content: space-around;
                    width: auto;
                    padding: 4px 8px;

                    .image-reload {
                        border-color: transparent;
                        border-radius: 10px;
                        padding: 4px 8px;
                        margin-left: 30px;
                        background-color: #3254ce;
                        font-weight: 600;
                        cursor: pointer;

                        .span {
                            padding: 4px 8px;
                        }
                        
                        &:hover {
                            background-color: #3254ce5c;
                        }
                    }

                    .table-choice {
                        border-color: transparent;
                        border-radius: 10px;
                        padding: 4px 8px;
                        margin-right: 15px;
                        cursor: pointer;
                        
                        .span {
                            padding: 4px 8px;
                            color: #3254ce;
                        }

                        &:hover {
                            background-color: #181a20;
                        }

                        &.active {
                            background-color: #3254ce;
                            color: #EAECEF;
                            font-weight: 600;

                            &:hover {
                                background-color: #3254ce5c;
                            }
                        }
                    }
                }
            }
        }

        .table-container {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            width: auto;
            height: auto;

            .table-wrapper {
                display: flex;
                flex-direction: column;
                justify-content: flex-start; // 내용물이 상단 정렬되도록 수정
                width: auto;
                background-color: transparent;
                padding: 5px;
                overflow-y: auto; // 세로 스크롤 활성화
                overflow: hidden;
                /* 경계선이 깔끔하게 보이도록 */

                .custom-table {
                    display: flex;
                    flex-direction: column;
                    width: auto; // 전체 너비
                    border-collapse: collapse;
                    margin: 0; // 여백 조정
                    overflow: auto;

                    thead {
                        padding-right: 5px;
                        th {
                            text-align: center;
                            padding: 10px 8px; // 패딩 조정
                            font-size: 14px;
                            background-color: #181a20; // 밝은 배경색
                            color: #EAECEF;
                            border-bottom: 2px solid #2B3139;
                        }
                        .th {
                            width: 140px;
                        }
                    }

                    tbody {
                        display: flex;
                        flex-direction: column;
                        overflow: auto;
                        height: auto; // 높이 설정을 제거하여 자동 조정
                        background-color: #1f25404b;
                        border: solid #2B3139;
                        border-width: 0 0 2px;
                        max-height: 450px;

                        &::-webkit-scrollbar {
                            display: flex;
                            width: 5px;
                            height: 5px;
                            border-radius: 6px;
                            background-color: transparent;
                        }
                        &::-webkit-scrollbar-thumb {
                            background: #8eaaff86;
                            border-radius: 6px;
                        }

                        .money-expression {
                            align-items: center;  
                            text-align: justify;
                            padding: 0 35px;
                            padding-top: 18px;


                            &:after{
                                content: ' ';
                              display: inline-block;
                              width: 100%;
                            }
                        }

                        tr {
                            height: 60px;
                        }

                        td {
                            width: 140px;
                            text-align: center;
                            padding: 10px 0; // 패딩 조정
                            font-size: 14px;
                            background-color: transparent;
                            border-top: 1px solid #2B3139; // 경계선 추가
                            color: #EAECEF;

                            input {
                                width: 80%;
                                text-align: center;
                                height: 36px;
                                box-sizing: border-box;
                                border: 1px solid #2B3139; // 경계선 색상 변경
                                border-radius: 8px;
                                transition: border-color 0.3s;
                                color: #EAECEF;
                                background-color: transparent; // 밝은 배경색

                                .numer {
                                    padding-left: 10px;
                                }

                                &::-webkit-inner-spin-button,
                                &::-webkit-outer-spin-button {
                                    height: 30px;
                                }
                                

                                &:hover {
                                    background-color: #292c33;
                                }

                                &:focus {
                                    border-color:1px solid #80bdff; // 포커스 시 경계선 색상
                                    outline: none;
                                    background-color: #181A20; // 포커스 시 배경색 변경
                                }
                            }
                        }
                    }
                    tr:hover {
                        background-color: rgba(0, 0, 0, 0.5);
                    }
                }
            }
        }
    }
}

